--- a/client/layouts/layout.html
+++ b/client/layouts/layout.html
@@ -1,43 +1,47 @@
 <template name="layout">
-    <div>
-        <div class="demo-layout mdl-layout mdl-js-layout mdl-layout--fixed-drawer mdl-layout--fixed-header">
-            <header class="demo-header mdl-layout__header mdl-color--grey-100 mdl-color-text--grey-600">
-                <div class="mdl-layout__header-row">
-                    {{#if showArrowBack}}
-                        <a class="mdl-button js-arrow-back mdl-js-button mdl-js-ripple-effect mdl-button--icon" href="/"
-                           title="go back"
-                           role="button" data-upgraded=",MaterialButton,MaterialRipple">
-                            <i class="material-icons" role="presentation">arrow_back</i>
+    {{#if isLogged}}
+        <div>
+            <div class="demo-layout mdl-layout mdl-js-layout mdl-layout--fixed-drawer mdl-layout--fixed-header">
+                <header class="demo-header mdl-layout__header mdl-color--grey-100 mdl-color-text--grey-600">
+                    <div class="mdl-layout__header-row">
+                        {{#if showArrowBack}}
+                            <a class="mdl-button js-arrow-back mdl-js-button mdl-js-ripple-effect mdl-button--icon" href="/"
+                               title="go back"
+                               role="button" data-upgraded=",MaterialButton,MaterialRipple">
+                                <i class="material-icons" role="presentation">arrow_back</i>
                             <span class="mdl-button__ripple-container"><span
                                     class="mdl-ripple is-animating"></span></span>
-                        </a>
-                    {{/if}}
-                    {{!--<span class="mdl-layout-title">Home</span>--}}
+                            </a>
+                        {{/if}}
+                        {{!--<span class="mdl-layout-title">Home</span>--}}
 
-                    <div class="mdl-layout-spacer"></div>
-                    {{!--<div class="mdl-textfield mdl-js-textfield mdl-textfield--expandable">
-                        <label class="mdl-button mdl-js-button mdl-button--icon" for="search">
-                            <i class="material-icons">search</i>
-                        </label>
+                        <div class="mdl-layout-spacer"></div>
+                        {{!--<div class="mdl-textfield mdl-js-textfield mdl-textfield--expandable">
+                            <label class="mdl-button mdl-js-button mdl-button--icon" for="search">
+                                <i class="material-icons">search</i>
+                            </label>
 
-                        <div class="mdl-textfield__expandable-holder">
-                            <input class="mdl-textfield__input" type="text" id="search">
-                            <label class="mdl-textfield__label" for="search">Enter your query...</label>
-                        </div>
-                    </div>--}}
-                </div>
-            </header>
-            <div class="demo-drawer mdl-layout__drawer mdl-color--blue-grey-900 mdl-color-text--blue-grey-50">
-                <header class="demo-drawer-header">
-                    {{>user}}
+                            <div class="mdl-textfield__expandable-holder">
+                                <input class="mdl-textfield__input" type="text" id="search">
+                                <label class="mdl-textfield__label" for="search">Enter your query...</label>
+                            </div>
+                        </div>--}}
+                    </div>
                 </header>
-                {{>leftMenu}}
-            </div>
-            <main class="mdl-layout__content mdl-color--grey-100">
-                <div class="mdl-grid demo-content">
-                    {{> yield}}
+                <div class="demo-drawer mdl-layout__drawer mdl-color--blue-grey-900 mdl-color-text--blue-grey-50">
+                    <header class="demo-drawer-header">
+                        {{>user}}
+                    </header>
+                    {{>leftMenu}}
                 </div>
-            </main>
+                <main class="mdl-layout__content mdl-color--grey-100">
+                    <div class="mdl-grid demo-content">
+                        {{> yield}}
+                    </div>
+                </main>
+            </div>
         </div>
-    </div>
+    {{else}}
+        {{>loading}}
+    {{/if}}
 </template>
